[IMPROVEMENT] adjusted z-index date-picker issue in modal dialog

--- a/templates/css/admin_backend.css
+++ b/templates/css/admin_backend.css
@@ -351,6 +351,7 @@ ul.admin_sort_product_listing > li > .admin_menu > a.btn-sm:first-child { paddin
 ul.admin_sort_product_listing > li > .button_wrapper { white-space:nowrap; padding-right:0; }
 
 #ui-datepicker-div { display:none; z-index:100 !important; }
+.jconfirm-noscroll #ui-datepicker-div { z-index:100000000 !important; }
 
 /* jquery tree overrule */
 .form-horizontal #sidetree .checkbox-inline { padding-top:0; }
